[latex-article] commented preamble and included some options
[latex-article] removed main.tex

--- a/latex-article/sections/section2.tex
+++ b/latex-article/sections/section2.tex
@@ -1,6 +1,6 @@
-\section{Section 2}\label{sec:section2}
+\section{Section two}\label{sec:section2}
 
-\lipsum[2-4]
+\lipsum[1-1]
 
 \subsection{Subsection title}\label{subsec:title}
 \lipsum[2-2]
