--- a/latex-notes/preamble.sty
+++ b/latex-notes/preamble.sty
@@ -24,6 +24,8 @@
 \usepackage{bm} % Bold math symbols
 
 \usepackage{newtxtext,newtxmath} % New text and math font
+\usepackage{algorithm}
+\usepackage{algorithmicx, algpseudocode}
 
 \makeatletter
 \setlength{\@fptop}{0pt}
