[latex-notes] possibility to include definitions and problems in colored boxes

--- a/latex-notes/notes.tex
+++ b/latex-notes/notes.tex
@@ -78,5 +78,18 @@ Explanation of code using highlighted syntax.
 \code{cpp}{double x(1.5);}{declaration with initialization}
 \code{cpp}{const double x = 1.5;}{initializes a constant}
 
+\begin{definition}{Lines intersections.}
+\begin{enumerate}
+  \item The lower point of $l_{ab}$ lies below $q$.
+  \item The upper point of $l_{ab}$ lies above $q$.
+  \item $q$ lies to the right from the line $\overrightarrow{l}_{ab}$, that
+      goes from $a$ to $b$.
+\end{enumerate}
+\end{definition}
+
+\begin{problem}{Point inclusion in a polygon}
+Given a point $q$ and a polygon $P$, determine if $q$ is inside or outside $P$.
+\end{problem}
+
 \end{document}
 
